--- a/base/css/base.css
+++ b/base/css/base.css
@@ -674,7 +674,7 @@ pre {
 		opacity: 0;
 	}
 }
-@keyframes rubberBand {
+@keyframes kfrubberBand {
 	from {
 		transform: scale3d(1, 1, 1);
 		opacity: 0;
@@ -754,8 +754,8 @@ pre {
 }
 
 .rubberBand {
-	-webkit-animation-name: rubberBand;
-	animation-name: rubberBand;
+	-webkit-animation-name: kfrubberBand;
+	animation-name: kfrubberBand;
 }
 
 .blinkFast {
@@ -847,22 +847,6 @@ pre {
 		transform: translate3d(0, 0, 0);
 	}
 }
-/* body {
-  -webkit-animation: background 5s cubic-bezier(1,0,0,1) infinite;
-  animation: background 5s cubic-bezier(1,0,0,1) infinite;  
-}
-@-webkit-keyframes background {
-  0% { background-color: #f99; }
-  33% { background-color: #9f9; }  
-  67% { background-color: #99f; }
-  100% { background-color: #f99; }
-}
-@keyframes background {
-  0% { background-color: #f99; }
-  33% { background-color: #9f9; }  
-  67% { background-color: #99f; }
-  100% { background-color: #f99; }
-} */
 
 /* #endregion animations */
 
