--- a/base/css/reset.css
+++ b/base/css/reset.css
@@ -1,10 +1,10 @@
 * {
-	margin:0;
-	padding:0;
-	border:0;
-	box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
-html, body {
+html,
+body {
   height: 100%;
 }
-
